# Exercitium1

./: .gitignore  Clasificacion.org  Exercitium1.cabal  Exercitium1314.cabal  README.org  TAGS  package.yaml  stack-docs  stack.yaml
docs/: Anagramas.html  Bandera_tricolor.html  ElementosMinimales.html  Exercitium1.haddock  Exercitium1.txt  Exercitium1314.haddock  Exercitium1314.txt  Iguales_al_siguiente.html  Lista_cuadrada.html  Mastermind.html  Matriz_Toeplitz.html  Ordenados_por_maximo.html  Primos_consecutivos_con_media_capicua.html  Primos_equidistantes.html  Segmentos_consecutivos.html  Suma_si_todos_justos.html  doc-index.html  index.html  mini_Anagramas.html  mini_Bandera_tricolor.html  mini_ElementosMinimales.html  mini_Iguales_al_siguiente.html  mini_Lista_cuadrada.html  mini_Mastermind.html  mini_Matriz_Toeplitz.html  mini_MaximosLocales.html  mini_Ordenados_por_maximo.html  mini_Primos_consecutivos_con_media_capicua.html  mini_Primos_equidistantes.html  mini_Segmentos_consecutivos.html  mini_Suma_si_todos_justos.html  z
src/: Alergias.hs  Alfabeto_desde.hs  Algun_vecino_menor.hs  Amplia_columnas.hs  Anagramas.hs  Bandera_tricolor.hs  Biparticiones_de_una_lista.hs  Buscaminas.hs  Buscaminas_v1.hs  Cadenas0y1.hs  Clausura.hs  Codigo_Morse.hs  Descomposiciones_con_n_sumandos.hs  Descomposiciones_triangulares.hs  Divide_si_todos_multiplos.hs  Divisores_con_final.hs  ElementosMinimales.hs  Elimina_n_elementos.hs  Elimina_unitarias.hs  EmparejamientoDeArboles.hs  Emparejamiento_binario.hs  Entero_positivo_de_la_cadena.hs  Enumera_arbol.hs  Filtro_booleano.hs  Iguales_al_siguiente.hs  Indices_verdaderos.hs  Insercion_en_arboles_binarios_de_busqueda.hs  Intercala_n_copias.hs  Laberinto_numerico.hs  Limite.hs  Lista_cuadrada.hs  Main.hs  Mas_cercano_cumpliendo_la_propiedad.hs  Mas_repetido.hs  Mastermind.hs  (+37 more)
(+358 files in other folders)
