name:                Exercitium1314
version:             0.1.0.0
synopsis:            Problemas de Exercitium (curso 2013-14)
description:         Ejercicios de programación funcional con Haskell
                     propuestos en el blog Exercitium durante el curso
                     2013-14.    
homepage:            https://github.com/jaalonso/Exercitium1314#readme
license:             BSD3
license-file:        LICENSE
author:              Jose A. Alonso
maintainer:          JoseA.Alonso@gmail.com
copyright:           Jose A. Alonso
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- executable exercitium
--   main-is:         Main.hs
--   build-depends:   base >= 4
--                  , QuickCheck
--                  , primes
--   ghc-options:     -Wall
--   hs-source-dirs:  src
                     
library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Iguales_al_siguiente
                     , Ordenados_por_maximo
                     , Bandera_tricolor
                     , ElementosMinimales
                     , Mastermind
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck >= 2.8.1
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Exercitium1314
                     , base
                     , QuickCheck >= 2.8.1
                     , hspec == 2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  
source-repository head
  type:     git
  location: https://github.com/jaalonso/Exercitium1314
